Day-3/reviewlabtwo/manifests/red-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: red
  template:
    metadata:
      labels:
        app: red
    spec:
      containers:
        - image: "colors:v1"
          imagePullPolicy: Never
          name: red
          ports:
            -
              containerPort: 8122
